jerseyライブラリを整理してInject対応